
set(LIBCODE_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/ai/ai.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ai/ai.h
	${CMAKE_CURRENT_SOURCE_DIR}/ai/ai_profiles.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ai/ai_profiles.h
	${CMAKE_CURRENT_SOURCE_DIR}/ai/aibig.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ai/aibig.h
	${CMAKE_CURRENT_SOURCE_DIR}/ai/aicode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ai/aigoals.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ai/aigoals.h
	${CMAKE_CURRENT_SOURCE_DIR}/ai/aiinternal.h
	${CMAKE_CURRENT_SOURCE_DIR}/ai/ailocal.h
	${CMAKE_CURRENT_SOURCE_DIR}/ai/aiturret.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/anim/animplay.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/anim/animplay.h
	${CMAKE_CURRENT_SOURCE_DIR}/anim/packunpack.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/anim/packunpack.h	
	${CMAKE_CURRENT_SOURCE_DIR}/asteroid/asteroid.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/asteroid/asteroid.h
	${CMAKE_CURRENT_SOURCE_DIR}/autopilot/autopilot.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/autopilot/autopilot.h
	${CMAKE_CURRENT_SOURCE_DIR}/bmpman/bm_internal.h
	${CMAKE_CURRENT_SOURCE_DIR}/bmpman/bmpman.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/bmpman/bmpman.h
	${CMAKE_CURRENT_SOURCE_DIR}/camera/camera.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/camera/camera.h
	${CMAKE_CURRENT_SOURCE_DIR}/cfile/cfile.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cfile/cfile.h
	${CMAKE_CURRENT_SOURCE_DIR}/cfile/cfilearchive.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cfile/cfilearchive.h
	${CMAKE_CURRENT_SOURCE_DIR}/cfile/cfilelist.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cfile/cfilesystem.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cfile/cfilesystem.h
	${CMAKE_CURRENT_SOURCE_DIR}/cmdline/cmdline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cmdline/cmdline.h
	${CMAKE_CURRENT_SOURCE_DIR}/cmeasure/cmeasure.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cmeasure/cmeasure.h
	${CMAKE_CURRENT_SOURCE_DIR}/controlconfig/controlsconfig.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/controlconfig/controlsconfig.h
	${CMAKE_CURRENT_SOURCE_DIR}/controlconfig/controlsconfigcommon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/cutscenes.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/cutscenes.h
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/decoder16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/decoder8.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/movie.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/movie.h
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/mve_audio.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/mvelib.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/mvelib.h
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/mveplayer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/oggplayer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cutscene/oggplayer.h
	${CMAKE_CURRENT_SOURCE_DIR}/ddsutils/ddsutils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ddsutils/ddsutils.h
	${CMAKE_CURRENT_SOURCE_DIR}/debris/debris.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/debris/debris.h
	${CMAKE_CURRENT_SOURCE_DIR}/debugconsole/console.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/debugconsole/timerbar.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/debugconsole/timerbar.h
	${CMAKE_CURRENT_SOURCE_DIR}/exceptionhandler/exceptionhandler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/exceptionhandler/exceptionhandler.h
	${CMAKE_CURRENT_SOURCE_DIR}/external_dll/externalcode.h
	${CMAKE_CURRENT_SOURCE_DIR}/external_dll/trackirglobal.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/external_dll/trackirpublic.h
	${CMAKE_CURRENT_SOURCE_DIR}/fireball/fireballs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fireball/fireballs.h
	${CMAKE_CURRENT_SOURCE_DIR}/fireball/warpineffect.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fs2netd/fs2netd_client.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fs2netd/fs2netd_client.h
	${CMAKE_CURRENT_SOURCE_DIR}/fs2netd/protocol.h
	${CMAKE_CURRENT_SOURCE_DIR}/fs2netd/tcp_client.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fs2netd/tcp_client.h
	${CMAKE_CURRENT_SOURCE_DIR}/fs2netd/tcp_socket.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fs2netd/tcp_socket.h
	${CMAKE_CURRENT_SOURCE_DIR}/gamehelp/contexthelp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gamehelp/contexthelp.h
	${CMAKE_CURRENT_SOURCE_DIR}/gamehelp/gameplayhelp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gamehelp/gameplayhelp.h
	${CMAKE_CURRENT_SOURCE_DIR}/gamesequence/gamesequence.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gamesequence/gamesequence.h
	${CMAKE_CURRENT_SOURCE_DIR}/gamesnd/eventmusic.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gamesnd/eventmusic.h
	${CMAKE_CURRENT_SOURCE_DIR}/gamesnd/gamesnd.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gamesnd/gamesnd.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/alphacolors.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/alphacolors.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/def_files.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/def_files.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/globals.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/linklist.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/profiling.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/pstypes.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/safe_strings.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/safe_strings.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/safe_strings_test.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/systemvars.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/systemvars.h
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/version.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/globalincs/version.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/2d.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/2d.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/font.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/font.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/generic.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/generic.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/grbatch.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/grbatch.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/grinternal.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengl.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengl.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglbmpman.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglbmpman.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengldraw.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengldraw.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglextension.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglextension.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengllight.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengllight.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglpostprocessing.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglpostprocessing.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglshader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglshader.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglstate.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropenglstate.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengltexture.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengltexture.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengltnl.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/gropengltnl.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/grstub.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/grstub.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/line.h
	${CMAKE_CURRENT_SOURCE_DIR}/graphics/tmapper.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hud.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hud.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudartillery.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudartillery.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudbrackets.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudbrackets.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudconfig.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudconfig.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudescort.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudescort.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudets.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudets.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudgauges.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudlock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudlock.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudmessage.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudmessage.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudnavigation.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudnavigation.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudobserver.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudobserver.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudparse.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudparse.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudreticle.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudreticle.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudshield.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudshield.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudsquadmsg.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudsquadmsg.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudtarget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudtarget.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudtargetbox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudtargetbox.h
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudwingmanstatus.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/hud/hudwingmanstatus.h
	${CMAKE_CURRENT_SOURCE_DIR}/iff_defs/iff_defs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/iff_defs/iff_defs.h
	${CMAKE_CURRENT_SOURCE_DIR}/inetfile/cftp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/inetfile/cftp.h
	${CMAKE_CURRENT_SOURCE_DIR}/inetfile/chttpget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/inetfile/chttpget.h
	${CMAKE_CURRENT_SOURCE_DIR}/inetfile/inetgetfile.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/inetfile/inetgetfile.h
	${CMAKE_CURRENT_SOURCE_DIR}/io/key.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/io/key.h
	${CMAKE_CURRENT_SOURCE_DIR}/io/keycontrol.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/io/keycontrol.h
	${CMAKE_CURRENT_SOURCE_DIR}/io/mouse.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/io/mouse.h
	${CMAKE_CURRENT_SOURCE_DIR}/io/timer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/io/timer.h
	${CMAKE_CURRENT_SOURCE_DIR}/jpgutils/jpgutils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/jpgutils/jpgutils.h
	${CMAKE_CURRENT_SOURCE_DIR}/jumpnode/jumpnode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/jumpnode/jumpnode.h
	${CMAKE_CURRENT_SOURCE_DIR}/lighting/lighting.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/lighting/lighting.h
	${CMAKE_CURRENT_SOURCE_DIR}/localization/fhash.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/localization/fhash.h
	${CMAKE_CURRENT_SOURCE_DIR}/localization/localize.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/localization/localize.h
	${CMAKE_CURRENT_SOURCE_DIR}/math/fix.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/math/fix.h
	${CMAKE_CURRENT_SOURCE_DIR}/math/floating.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/math/floating.h
	${CMAKE_CURRENT_SOURCE_DIR}/math/fvi.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/math/fvi.h
	${CMAKE_CURRENT_SOURCE_DIR}/math/spline.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/math/spline.h
	${CMAKE_CURRENT_SOURCE_DIR}/math/staticrand.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/math/staticrand.h
	${CMAKE_CURRENT_SOURCE_DIR}/math/vecmat.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/math/vecmat.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/barracks.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/barracks.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/credits.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/credits.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/fishtank.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/fishtank.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/mainhallmenu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/mainhallmenu.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/mainhalltemp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/mainhalltemp.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/optionsmenu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/optionsmenu.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/optionsmenumulti.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/optionsmenumulti.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/playermenu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/playermenu.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/readyroom.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/readyroom.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/snazzyui.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/snazzyui.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/techmenu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/techmenu.h
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/trainingmenu.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/menuui/trainingmenu.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionbriefcommon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionbriefcommon.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missioncampaign.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missioncampaign.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missiongoals.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missiongoals.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missiongrid.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missiongrid.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionhotkey.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionhotkey.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionload.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionload.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionlog.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionlog.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionmessage.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionmessage.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionparse.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missionparse.h
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missiontraining.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mission/missiontraining.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/chatbox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/chatbox.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/fictionviewer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/fictionviewer.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionbrief.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionbrief.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missioncmdbrief.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missioncmdbrief.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missiondebrief.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missiondebrief.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionloopbrief.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionloopbrief.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionpause.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionpause.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionrecommend.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionrecommend.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionscreencommon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionscreencommon.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionshipchoice.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionshipchoice.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionstats.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionstats.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionweaponchoice.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/missionweaponchoice.h
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/redalert.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/missionui/redalert.h
	${CMAKE_CURRENT_SOURCE_DIR}/mod_table/mod_table.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/mod_table/mod_table.h
	${CMAKE_CURRENT_SOURCE_DIR}/model/model.h
	${CMAKE_CURRENT_SOURCE_DIR}/model/modelanim.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/model/modelanim.h
	${CMAKE_CURRENT_SOURCE_DIR}/model/modelcollide.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/model/modelinterp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/model/modeloctant.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/model/modelread.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/model/modelsinc.h
	${CMAKE_CURRENT_SOURCE_DIR}/nebula/neb.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/nebula/neb.h
	${CMAKE_CURRENT_SOURCE_DIR}/nebula/neblightning.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/nebula/neblightning.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/chat_api.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/chat_api.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_campaign.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_campaign.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_data.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_data.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_dogfight.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_dogfight.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_endgame.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_endgame.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_ingame.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_ingame.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_kick.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_kick.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_log.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_log.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_obj.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_obj.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_observer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_observer.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_options.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_options.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pause.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pause.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pinfo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pinfo.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_ping.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_ping.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pmsg.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pmsg.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pxo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_pxo.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_rate.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_rate.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_respawn.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_respawn.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_sexp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_sexp.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_team.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_team.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_update.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_voice.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_voice.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_xfer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multi_xfer.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multilag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multilag.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multimsgs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multimsgs.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multiteamselect.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multiteamselect.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multiui.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multiui.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/multiutil.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/multiutil.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/psnet2.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/psnet2.h
	${CMAKE_CURRENT_SOURCE_DIR}/network/stand_gui-unix.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/stand_gui.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/network/stand_gui.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/collidedebrisship.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/collidedebrisweapon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/collideshipship.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/collideshipweapon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/collideweaponweapon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/deadobjectdock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/deadobjectdock.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/objcollide.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/objcollide.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/object.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/object.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/objectdock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/objectdock.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/objectshield.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/objectshield.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/objectsnd.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/objectsnd.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/objectsort.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/parseobjectdock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/parseobjectdock.h
	${CMAKE_CURRENT_SOURCE_DIR}/object/waypoint.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/object/waypoint.h
	${CMAKE_CURRENT_SOURCE_DIR}/observer/observer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/observer/observer.h
	${CMAKE_CURRENT_SOURCE_DIR}/palman/palman.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/palman/palman.h
	${CMAKE_CURRENT_SOURCE_DIR}/parse/encrypt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/parse/encrypt.h
	${CMAKE_CURRENT_SOURCE_DIR}/parse/generic_log.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/parse/generic_log.h
	${CMAKE_CURRENT_SOURCE_DIR}/parse/lua.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/parse/lua.h
	${CMAKE_CURRENT_SOURCE_DIR}/parse/parselo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/parse/parselo.h
	${CMAKE_CURRENT_SOURCE_DIR}/parse/scripting.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/parse/scripting.h
	${CMAKE_CURRENT_SOURCE_DIR}/parse/sexp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/parse/sexp.h
	${CMAKE_CURRENT_SOURCE_DIR}/particle/particle.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/particle/particle.h
	${CMAKE_CURRENT_SOURCE_DIR}/pcxutils/pcxutils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pcxutils/pcxutils.h
	${CMAKE_CURRENT_SOURCE_DIR}/physics/physics.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/physics/physics.h
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/csg.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/csg_convert.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/pilotfile.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/pilotfile.h
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/pilotfile_convert.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/pilotfile_convert.h
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/plr.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pilotfile/plr_convert.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/playerman/managepilot.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/playerman/managepilot.h
	${CMAKE_CURRENT_SOURCE_DIR}/playerman/player.h
	${CMAKE_CURRENT_SOURCE_DIR}/playerman/playercontrol.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pngutils/pngutils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/pngutils/pngutils.h
	${CMAKE_CURRENT_SOURCE_DIR}/popup/popup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/popup/popup.h
	${CMAKE_CURRENT_SOURCE_DIR}/popup/popupdead.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/popup/popupdead.h
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radar.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radar.h
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radardradis.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radardradis.h
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radarorb.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radarorb.h
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radarsetup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/radar/radarsetup.h
	${CMAKE_CURRENT_SOURCE_DIR}/render/3d.h
	${CMAKE_CURRENT_SOURCE_DIR}/render/3dclipper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/render/3ddraw.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/render/3dinternal.h
	${CMAKE_CURRENT_SOURCE_DIR}/render/3dlaser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/render/3dmath.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/render/3dsetup.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/afterburner.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/afterburner.h
	${CMAKE_CURRENT_SOURCE_DIR}/ship/awacs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/awacs.h
	${CMAKE_CURRENT_SOURCE_DIR}/ship/shield.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/ship.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/ship.h
	${CMAKE_CURRENT_SOURCE_DIR}/ship/shipcontrails.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/shipcontrails.h
	${CMAKE_CURRENT_SOURCE_DIR}/ship/shipfx.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/shipfx.h
	${CMAKE_CURRENT_SOURCE_DIR}/ship/shiphit.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ship/shiphit.h
	${CMAKE_CURRENT_SOURCE_DIR}/ship/subsysdamage.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/acm.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/acm.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/audiostr.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/audiostr.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/ds.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/ds.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/ds3d.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/ds3d.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/dscap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/dscap.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/fsspeech.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/fsspeech.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/ogg/ogg.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/ogg/ogg.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/openal.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/openal.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/rtvoice.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/rtvoice.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/sound.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/sound.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/speech.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/speech.h
	${CMAKE_CURRENT_SOURCE_DIR}/sound/voicerec.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/sound/voicerec.h
	${CMAKE_CURRENT_SOURCE_DIR}/species_defs/species_defs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/species_defs/species_defs.h
	${CMAKE_CURRENT_SOURCE_DIR}/starfield/nebula.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/starfield/nebula.h
	${CMAKE_CURRENT_SOURCE_DIR}/starfield/starfield.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/starfield/starfield.h
	${CMAKE_CURRENT_SOURCE_DIR}/starfield/supernova.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/starfield/supernova.h
	${CMAKE_CURRENT_SOURCE_DIR}/stats/medals.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/stats/medals.h
	${CMAKE_CURRENT_SOURCE_DIR}/stats/scoring.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/stats/scoring.h
	${CMAKE_CURRENT_SOURCE_DIR}/stats/stats.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/stats/stats.h
	${CMAKE_CURRENT_SOURCE_DIR}/tgautils/tgautils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/tgautils/tgautils.h
	${CMAKE_CURRENT_SOURCE_DIR}/ui/button.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/checkbox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/gadget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/icon.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/inputbox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/keytrap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/listbox.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/radio.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/scroll.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/slider.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/slider2.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/ui.h
	${CMAKE_CURRENT_SOURCE_DIR}/ui/uidefs.h
	${CMAKE_CURRENT_SOURCE_DIR}/ui/uidraw.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/uimouse.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui/window.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/beam.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/beam.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/corkscrew.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/corkscrew.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/emp.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/emp.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/flak.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/flak.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/muzzleflash.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/muzzleflash.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/shockwave.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/shockwave.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/swarm.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/swarm.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/trails.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/trails.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/weapon.h
	${CMAKE_CURRENT_SOURCE_DIR}/weapon/weapons.cpp
	# For "old" MSVC?
	#${CMAKE_CURRENT_SOURCE_DIR}/globalincs/fsmemory.cpp
	#${CMAKE_CURRENT_SOURCE_DIR}/globalincs/fsmemory.h
)

if(UNIX)
	set(LIBCODE_SOURCES
		${LIBCODE_SOURCES}
		${CMAKE_CURRENT_SOURCE_DIR}/io/joy.h
		${CMAKE_CURRENT_SOURCE_DIR}/io/joy_ff.h
		${CMAKE_CURRENT_SOURCE_DIR}/io/joy-unix.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osapi_unix.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osapi.h
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osregistry_unix.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osregistry.h
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/outwnd_unix.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/outwnd.h
		${CMAKE_CURRENT_SOURCE_DIR}/windows_stub/stubs.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/windows_stub/config.h
	)
elseif(MSVC)
	set(LIBCODE_SOURCES
		${LIBCODE_SOURCES}
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vasync.h
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vd3dtypes.h
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vddraw.h
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vdinput.h
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vdplay.h
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vdplobby.h
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vdsetup.h
		${CMAKE_CURRENT_SOURCE_DIR}/directx/vdvp.h
		${CMAKE_CURRENT_SOURCE_DIR}/globalincs/mspdb_callstack.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/globalincs/mspdb_callstack.h
		${CMAKE_CURRENT_SOURCE_DIR}/globalincs/windebug.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/graphics/gl/GLAUX.h
		${CMAKE_CURRENT_SOURCE_DIR}/graphics/gl/Glext.h
		${CMAKE_CURRENT_SOURCE_DIR}/graphics/gl/GLU.h
		${CMAKE_CURRENT_SOURCE_DIR}/graphics/gl/wglext.h
		${CMAKE_CURRENT_SOURCE_DIR}/graphics/gl/Gl.h
		${CMAKE_CURRENT_SOURCE_DIR}/io/joy.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/io/joy_ff.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/io/sw_error.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/io/sw_force.h
		${CMAKE_CURRENT_SOURCE_DIR}/io/sw_guid.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/io/swff_lib.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/network/multi_update.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/network/multi_update.h
		${CMAKE_CURRENT_SOURCE_DIR}/network/stand_gui.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/monopub.h
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osapi.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osapi.h
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osregistry.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/osregistry.h
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/outwnd.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/osapi/outwnd.h
	)
endif()

# WARNING: Untested.
option(FS2OPEN_SPEECH "Enable Text-to-Speech" FALSE)
if(FS2OPEN_SPEECH)
	set_source_files_properties(
		${CMAKE_CURRENT_SOURCE_DIR}/sound/fsspeech.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/sound/fsspeech.h
		${CMAKE_CURRENT_SOURCE_DIR}/sound/speech.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/sound/speech.h
			PROPERTIES
				COMPILE_DEFINITIONS "FS2_SPEECH"
	)
endif(FS2OPEN_SPEECH)

add_subdirectory(freespace2)

find_package(MFC)
if(MFC_FOUND)
	add_subdirectory(fred2)
endif(MFC_FOUND)

find_package(wxWidgets COMPONENTS gl core base)
if(wxWidgets_FOUND)
	add_subdirectory(wxfred2)
endif(wxWidgets_FOUND)
